Experimenting with min-width and preventing overflows

--- a/source/assets/stylesheets/global.scss
+++ b/source/assets/stylesheets/global.scss
@@ -57,58 +57,6 @@ body {
   background-color: #F3FFCF; /* mellow yellow */
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-
-  .title_text {
-    /* position */
-    display: block;
-    position: relative;
-    padding: 5px;
-    margin: 5px;
-    float: left;
-    width: 100%;
-    height: 50px; /* TECH NOTE: is this the default? */
-
-    /* appearance */
-    font-size: 24pt;
-
-    /* debug */
-    outline-style: dashed;
-    outline-color: blue;
-    color: blue;
-  }
-
-  /* TEXT: organize these! Make subclasses, inheritances. */ 
-
-  .paragraph_text {
-    /* position */
-    display: block;
-    position: relative;
-    padding: 5px;
-    margin: 5px;
-    width: 100%;
-    height: 100px; /* TECH NOTE: is this the default? */
-
-    /* appearance */
-    font-size: 14pt;
-
-    /* debug */
-    outline-style: dashed;
-    outline-color: red;
-    color: red;
-  }
-  
-    .product_description {
-       font-size: 14px;    
-       -webkit-transition: color 0.3s ease-in-out;
-       -moz-transition: color 0.3s ease-in-out;
-       -ms-transition: color 0.3s ease-in-out;
-       -o-transition: color 0.3s ease-in-out;
-       transition: color 0.3s ease-in-out;
-
-       &:hover { 
-         color: purple;
-       }
-    }
     
 
   .jpg_wrap {
@@ -142,35 +90,7 @@ body {
 
   }
 
-  /* TECH NOTE: organize wraps. Make subclasses, inheritances. */ 
 
-  .screen_wide_wrap {
-    /* position */
-    display: block;
-    position: relative;
-    margin: 5px;
-    padding: 5px;
-    width: 99%; /* TECH NOTE: Is there a better solution for collision with right scroll bar? */
-    height: 500px;
-    
-    /* appearance */ 
-    background: #030D4F; /* dark blue / corben */
-    border-radius: 20px;
-  }
-
-  .short_wide_wrap {
-    /* position */
-    display: block;
-    position: relative;
-    margin: 5px;
-    padding: 5px;
-    width: 100%;
-    height: 20%;
-
-    /* appearance */
-    outline-style: dotted;
-    outline-color: green;
-  }
 
   .screen_wide_spacer { /* TECH NOTE: Is there a better solution */
     /* transparent spacer, e.g., btw fixed header and other body elements */
